data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_808.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\95\80\80\80\00\01\03\65\6e\76\0d\65\78"
    "\74\65\72\6e\61\6c\5f\66\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\00\07\8d\80\80\80\00\01\09\74\65\73"
    "\74\5f\66\75\6e\63\00\01\0a\94\80\80\80\00\01\8e"
    "\80\80\80\00\00\41\01\04\40\10\00\01\05\01\10\00"
    "\0b\0b"
  )
""
)